# HandWriting

./: ReadMe.md
HandWritingFinal/: CMakeLists.txt
HandWritingFinal/src/: main.cpp
HandWritingFinal/src/core/: handsinput.cpp  handsinput.h  inputsuggestion.cpp  inputsuggestion.h
HandWritingFinal/src/resources/: resources.qrc
HandWritingFinal/src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_input.cpp  mainwindow_pages.cpp  mainwindow_settings.cpp
